feat: add admin rest api
